v3.0.2.6 - Better NmsTest error handling - StringUtilP no longer breaks when PAPI is missing. It will log a warning for each request instead.