@@ -22,7 +22,7 @@ import org.bukkit.inventory.meta.ItemMeta;
 
 import java.awt.Color;
 
-@SuppressWarnings("SpellCheckingInspection")
+@SuppressWarnings({"SpellCheckingInspection", "unused"})
 public class CmdNmsTest extends KamiCommand {
     public CmdNmsTest() {
         addAliases("nmstest");
@@ -33,56 +33,88 @@ public class CmdNmsTest extends KamiCommand {
 
     @Override
     public void perform() {
-        Player player = (Player) sender;
-        player.sendMessage(StringUtil.t("&7NMS Version: &f" + NmsVersion.getMCVersion() + " &7(&f" + NmsVersion.getFormattedNmsInteger() + "&7)"));
-        player.sendMessage(StringUtil.t("  &7WineSpigot?: &f" + NmsVersion.isWineSpigot()));
+        Player plr = (Player) sender;
+        plr.sendMessage(StringUtil.t("&7NMS Version: &f" + NmsVersion.getMCVersion() + " &7(&f" + NmsVersion.getFormattedNmsInteger() + "&7)"));
+        plr.sendMessage(StringUtil.t("  &7WineSpigot?: &f" + NmsVersion.isWineSpigot()));
 
         // Chat Color Provider Test
-        player.sendMessage(StringUtil.t("&7Testing ChatColorProvider..."));
-        ChatColorProvider ccProvider = NmsAPI.getChatColorProvider();
-        Color jColor = ccProvider.get().getColor(ChatColor.AQUA);
-        player.sendMessage(StringUtil.t("    &7Success"));
+        boolean t1 = runTest((player) -> {
+            player.sendMessage(StringUtil.t("&7Testing ChatColorProvider..."));
+            ChatColorProvider ccProvider = NmsAPI.getChatColorProvider();
+            Color jColor = ccProvider.get().getColor(ChatColor.AQUA);
+            player.sendMessage(StringUtil.t("    &7Success"));
+        }, plr);
 
         // Block Util Provider Test
-        player.sendMessage(StringUtil.t("&7Testing BlockUtilProvider..."));
-        BlockUtilProvider buProvider = NmsAPI.getBlockUtilProvider();
-        Block block = Bukkit.getWorlds().get(0).getBlockAt(0, 0, 0);
-        Material oldType = block.getType();
-        buProvider.get().setBlockSuperFast(block, XMaterial.IRON_BLOCK, PlaceType.BUKKIT);
-        buProvider.get().setBlockSuperFast(block, XMaterial.DIAMOND_BLOCK, PlaceType.NO_PHYSICS);
-        buProvider.get().setBlockSuperFast(block, XMaterial.EMERALD_BLOCK, PlaceType.NMS);
-        block.setType(oldType);
-        player.sendMessage(StringUtil.t("    &7Success"));
+        boolean t2 = runTest((player) -> {
+            player.sendMessage(StringUtil.t("&7Testing BlockUtilProvider..."));
+            BlockUtilProvider buProvider = NmsAPI.getBlockUtilProvider();
+            Block block = Bukkit.getWorlds().getFirst().getBlockAt(0, 0, 0);
+            Material oldType = block.getType();
+            buProvider.get().setBlockSuperFast(block, XMaterial.IRON_BLOCK, PlaceType.BUKKIT);
+            buProvider.get().setBlockSuperFast(block, XMaterial.DIAMOND_BLOCK, PlaceType.NO_PHYSICS);
+            buProvider.get().setBlockSuperFast(block, XMaterial.EMERALD_BLOCK, PlaceType.NMS);
+            block.setType(oldType);
+            player.sendMessage(StringUtil.t("    &7Success"));
+        }, plr);
 
         // MessageManager Test
-        player.sendMessage(StringUtil.t("&7Testing MessageManager..."));
-        ItemStack item = new ItemStack(Material.DIAMOND_SWORD);
-        ItemMeta meta = item.getItemMeta();
-        meta.setDisplayName(StringUtil.t("&c&lTest Item"));
-        item.setItemMeta(meta);
-        Action clickCmd = new Action("<1>", "&aClickCmd").setClickRunCommand("/help");
-        Action clickSug = new Action("<2>", "&bClickSug").setClickSuggestCommand("help");
-        Action clickUrl = new Action("<3>", "&cClickUrl").setClickOpenURL("https://google.com");
-        Action hoverText = new Action("<4>", "&dHoverText").setHoverText(StringUtil.t("&bThis is hover text"));
-        Action hoverItem = new Action("<5>", "&eHoverItem").setHoverItem(item);
-        Action combined = new Action("<6>", "&fCombined").setClickSuggestCommand("help").setHoverText(StringUtil.t("&bThis is hover text"));
-        String message = "Test: <1> <2> <3> <4> <5> <6>";
-        NmsAPI.getMessageManager().processAndSend(player, message, clickCmd, clickSug, clickUrl, hoverText, hoverItem, combined);
+        boolean t3 = runTest((player) -> {
+            player.sendMessage(StringUtil.t("&7Testing MessageManager..."));
+            ItemStack item = new ItemStack(Material.DIAMOND_SWORD);
+            ItemMeta meta = item.getItemMeta();
+            meta.setDisplayName(StringUtil.t("&c&lTest Item"));
+            item.setItemMeta(meta);
+            Action clickCmd = new Action("<1>", "&aClickCmd").setClickRunCommand("/help");
+            Action clickSug = new Action("<2>", "&bClickSug").setClickSuggestCommand("help");
+            Action clickUrl = new Action("<3>", "&cClickUrl").setClickOpenURL("https://google.com");
+            Action hoverText = new Action("<4>", "&dHoverText").setHoverText(StringUtil.t("&bThis is hover text"));
+            Action hoverItem = new Action("<5>", "&eHoverItem").setHoverItem(item);
+            Action combined = new Action("<6>", "&fCombined").setClickSuggestCommand("help").setHoverText(StringUtil.t("&bThis is hover text"));
+            String message = "Test: <1> <2> <3> <4> <5> <6>";
+            NmsAPI.getMessageManager().processAndSend(player, message, clickCmd, clickSug, clickUrl, hoverText, hoverItem, combined);
+        }, plr);
 
         // Teleport Provider Test
-        player.sendMessage(StringUtil.t("&7Testing TeleportProvider..."));
-        NmsAPI.getTeleporter().teleportWithoutEvent(player, player.getLocation().clone().add(0, 0.5, 0));
-        player.sendMessage(StringUtil.t("    &7Success"));
+        boolean t4 = runTest((player) -> {
+            player.sendMessage(StringUtil.t("&7Testing TeleportProvider..."));
+            NmsAPI.getTeleporter().teleportWithoutEvent(player, player.getLocation().clone().add(0, 0.5, 0));
+            player.sendMessage(StringUtil.t("    &7Success"));
+        }, plr);
 
         // Main Hand Provider
-        player.sendMessage(StringUtil.t("&7Testing MainHandProvider..."));
-        ItemStack stack = NmsAPI.getItemInMainHand(player);
-        player.sendMessage(StringUtil.t("    &7Success: " + (stack == null ? "AIR" : stack.getType().name())));
+        boolean t5 = runTest((player) -> {
+            player.sendMessage(StringUtil.t("&7Testing MainHandProvider..."));
+            ItemStack stack = NmsAPI.getItemInMainHand(player);
+            player.sendMessage(StringUtil.t("    &7Success: " + (stack == null ? "AIR" : stack.getType().name())));
+        }, plr);
 
         // Enchant ID Provider
-        player.sendMessage(StringUtil.t("&7Testing EnchantIDProvider..."));
-        player.sendMessage(StringUtil.t("    &7Success: " + NmsAPI.getNamespaced(Enchantment.DAMAGE_ALL)));
+        boolean t6 = runTest((player) -> {
+            player.sendMessage(StringUtil.t("&7Testing EnchantIDProvider..."));
+            player.sendMessage(StringUtil.t("    &7Success: " + NmsAPI.getNamespaced(Enchantment.DAMAGE_ALL)));
+        }, plr);
 
-        player.sendMessage(StringUtil.t("&aALL TESTS PASSED!"));
+        if (t1 && t2 && t3 && t4 && t5 && t6) {
+            plr.sendMessage(StringUtil.t("&aALL TESTS PASSED!"));
+        }else {
+            plr.sendMessage(StringUtil.t("&cTEST SUITE FAILED! See Console."));
+        }
+    }
+
+
+    // Test Interface
+    public interface Test {
+        void run(Player player);
+    }
+    private static boolean runTest(Test test, Player player) {
+        try {
+            test.run(player);
+            return true;
+        } catch (Exception e) {
+            e.printStackTrace();
+            player.sendMessage(StringUtil.t("    &cFAILURE (see console)"));
+            return false;
+        }
     }
 }
